# btsco

./: Makefile.am  Makefile.in  README  a2dp.h  a2play.c  a2recv.c  aclocal.m4  avsnd.c  btsco.c  btsco2.c  configure  configure.in
alsa-plugins/: BUILD  Makefile.am  Makefile.in  pcm_a2dp.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
avdtp/: Makefile.in
debian/: a2play.1  a2recv.1  btsco-source.dirs  btsco-source.links  btsco.1  btsco.dirs  btsco.manpages  btsco2.1  changelog  control  control.modules.in  copyright  rules  rules.modules
debian/patches/: 00list  01_improve-kernel-makefile.dpatch  02_2.6.11.dpatch
kernel/: Makefile  btsco.c
sbc/: Makefile.in
